k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory
  labels:
    app.kubernetes.io/part-of: cloud-native-inventory-platform
    environment: lab
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
