k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: inventory
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: cloud-native-inventory-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
