k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: inventory
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: cloud-native-inventory-platform
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432 
      targetPort: 5432
      protocol: TCP
