k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: inventory
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: cloud-native-inventory-platform
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  type: ClusterIP
