k8s/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory
  namespace: inventory
  labels:
    app.kubernetes.io/part-of: cloud-native-inventory-platform
spec:
  ingressClassName: nginx
  rules:
    - host: inventory.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
